--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-drax": "^0.8.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.9.2",
+    "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
     "react-native-web": "~0.13.12"
