--- a/package.json
+++ b/package.json
@@ -1,33 +1,30 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
+  "name": "tasks",
+  "version": "1.0.1",
+  "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.0.9",
-    "@react-navigation/material-bottom-tabs": "^6.0.9",
-    "@react-navigation/native": "^6.0.6",
-    "@react-navigation/stack": "^6.0.11",
-    "expo": "~42.0.1",
-    "expo-status-bar": "~1.0.4",
-    "firebase": "8.2.3",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-drax": "^0.8.2",
-    "react-native-gesture-handler": "^1.10.3",
-    "react-native-paper": "^4.9.2",
-    "react-native-restart": "^0.0.24",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12"
+    "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/stack": "^6.4.1",
+    "expo": "~51.0.24",
+    "firebase": "^10.12.5",
+    "react": "18.2.0",
+    "react-native": "0.74.3",
+    "react-native-gesture-handler": "2.16.1",
+    "react-native-restart": "^0.0.27",
+    "react-native-safe-area-context": "4.10.5",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@types/react": "~18.2.45"
   },
-  "private": false
+  "private": true
 }
