--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "dotenv": "^16.4.5",
     "expo": "~51.0.24",
     "firebase": "^10.12.5",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "2.16.1",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "4.10.5",
