--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@react-navigation/material-bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
+    "dotenv": "^16.4.5",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-dotenv": "^3.4.11",
     "react-native-drax": "^0.8.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-paper": "^4.9.2",
